refactor(responsive, sass, apple): sass-mediaqueries initial integration

--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -1,14 +1,12 @@
 @import 'vendors/bootstrap4/bootstrap';
+@import 'vendors/sass-mediaqueries/media-queries';
 @import 'utils/mixins';
 
 .wow {
-  @include media-breakpoint-down(sm) {
-    animation: none !important;
-    visibility: visible !important;
-  }
-
-  @include browser(Safari) {
-    animation: none !important;
-    visibility: visible !important;
+  // countdown number of ..
+  &.number-of {
+    @include browser(Safari) {
+      @include disable-animations;
+    }
   }
 }
