--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -13,7 +13,7 @@ $default-padding-px: 19px;
 
 // navbar
 $navbar-default-height: 59px;
-$navbar-md-height: 130px;
+$navbar-md-height: 4em;
 
 // md grid
 $hero-row-height-default: 416px;
