--- a/src/sass/themes/countdown-section.scss
+++ b/src/sass/themes/countdown-section.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  margin: 0 auto;
 
   .number-of {
     color: $countdown-color;
@@ -13,6 +14,12 @@
     .days-label {
       font-size: 8px;
     }
+  }
+}
+
+@include media-breakpoint-down(xl) {
+  .countdown-container {
+    max-width: 85%;
   }
 }
 
@@ -36,5 +43,11 @@
         top: -1em;
       }
     }
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .countdown-container {
+    max-width: 75% !important;
   }
 }
