--- a/src/sass/themes/hero-section.scss
+++ b/src/sass/themes/hero-section.scss
@@ -19,7 +19,6 @@
 
     .image-2020 {
       background-image: url('../images/2020.png');
-      background-position: center;
       background-size: auto;
       grid-area: 1 / 1 / 2 / 2;
       grid-column: 1;
@@ -34,21 +33,9 @@
       grid-column: 1 / span 2;
     }
 
-    // @include media-breakpoint-down(sm) {
-    //   .image-2020 {
-    //     background-position: 9px center;
-    //   }
-    // }
-
-    // @include media-breakpoint-down(md) {
-    //   .image-2020 {
-    //     background-size: auto;
-    //   }
-    // }
-
     // TABLETS AND UP
-    @include media-breakpoint-up(md) {
-      height: 70vh;
+    @include media-breakpoint-up(sm) {
+      height: 74vh;
 
       .image-2020 {
         background-image: url('../images/2020@3x.png');
@@ -58,12 +45,13 @@
 
       .image-hero-model {
         background-image: url('../images/2020-model@2x.png');
-        background-position: 70% bottom !important;
+        background-position: 50vw bottom !important;
         background-size: contain;
+        z-index: 2;
       }
     }
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-down(sm) {
       .image-2020 {
         background-position: 3em center;
       }
