improvement(navbar, overlay, full-screen): open sans light

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -17,7 +17,7 @@ $color-okada-dark-2: #b67c30;
 
 // others
 $okada-logo-color: #f0e6c3;
-$navbar-primary-color: #f8d76d;
+$navbar-primary-color: $color-okada-light-3;
 $hero-section-right-color: #ce8735;
 $countdown-color: $color-okada-dark-1;
 $hero-heading-color: $color-okada-dark-1;
