style(nav-overlay, overlay, full-screen): transparent nav-overlay

--- a/src/sass/base/colors.scss
+++ b/src/sass/base/colors.scss
@@ -58,6 +58,7 @@ $guest-name-info-bg: linear-gradient(
   rgba(60, 60, 59, 1) 100%
 );
 $nav-overlay-hover-gradient: $guest-name-info-bg;
+$nav-overlay-bg: rgba($color-okada-dark-1, 0.89);
 
 // base gradient pallette
 $okada-base-gradient-color-1: rgba(182, 124, 48, 1);
