--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'variables';
 @import 'animations';
 @import 'utils/mixins';
+@import 'utils/google-font';
 @import 'base/colors';
 @import 'base/typography';
 @import 'components/buttons';
