--- a/src/sass/themes/others.scss
+++ b/src/sass/themes/others.scss
@@ -381,7 +381,8 @@ body {
       .the-restaurants-heading {
         // color: $hero-caption-color-darker;
         font-size: 75px;
-        line-height: 4rem;
+        line-height: 75px;
+        margin-bottom: 0.3em;
         // width: 60%;
       }
 
