--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -6,7 +6,7 @@ $font-family-gotham-black: 'Gotham Black', 'Arial Black', serif;
 $font-family-gotham-light: 'Gotham Light', 'Open Sans', Verdana, serif;
 $font-family-gotham-medium: 'Gotham Medium', 'Open Sans', 'Roboto', serif;
 $font-family-gotham-medium-fall-back: 'Open Sans', serif;
-$font-family-playfair-display-regular: 'Fairplay Display', 'Times New Roman', serif;
+$font-family-playfair-display-regular: 'Playfair Display', 'Times New Roman', serif;
 
 // reusable
 $default-padding-px: 19px;
