refactor(nav-overlay, countdown, fonts): cosmetic adjustments

--- a/src/sass/components/nav-overlay.scss
+++ b/src/sass/components/nav-overlay.scss
@@ -46,7 +46,7 @@
     color: $color-okada-light-3;
     font-size: 60px;
     position: absolute;
-    right: 37px;
+    right: 4.6rem;
     top: 1.5px;
 
     &:hover,
