--- a/src/sass/themes/countdown-section.scss
+++ b/src/sass/themes/countdown-section.scss
@@ -8,6 +8,7 @@
     color: $countdown-color;
     font-family: $font-family-gotham-light;
     font-size: 48px;
+    font-weight: 300;
     text-align: center;
     width: 40%;
 
@@ -26,7 +27,7 @@
 @include media-breakpoint-up(lg) {
   .countdown-container {
     .number-of {
-      font-size: 80px !important;
+      font-size: 88px !important;
     }
   }
 }
