--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,11 +1,11 @@
 // typography
 $font-family-open-sans: 'Open Sans', sans-serif;
 $font-family-roboto-bold-italic: 'Roboto Bold Italic', sans-serif !important;
-$font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', Verdana, serif;
+$font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', sans-serif;
 $font-family-gotham-black: 'Gotham Black', 'Arial Black', serif;
-$font-family-gotham-light: 'Gotham Light', 'Open Sans', Verdana, serif;
-$font-family-gotham-medium: 'Gotham Medium', 'Open Sans', 'Roboto', serif;
-$font-family-gotham-medium-fall-back: 'Open Sans', serif;
+$font-family-gotham-light: 'Gotham Light', 'Open Sans', 'Roboto', sans-serif;
+$font-family-gotham-medium: 'Gotham Medium', 'Open Sans', 'Roboto', sans-serif;
+$font-family-gotham-medium-fall-back: 'Open Sans', sans-serif;
 $font-family-playfair-display-regular: 'Playfair Display', 'Times New Roman', serif;
 
 // reusable
