refactor(sass, jquery, smoothscroll, nav-overlay): smoothscroll & scroll-to-top integration
with few performance fixes

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
 @import 'components/navbar';
 @import 'components/nav-overlay';
 @import 'components/swiper';
+@import 'components/return-to-top';
 @import 'layout/grid';
 
 // Theming
