--- a/src/sass/themes/mobile.scss
+++ b/src/sass/themes/mobile.scss
@@ -1,4 +1,5 @@
 // Proper mobile patches
+// NOTE: DON'T MOVE COVE MANILA HERE
 // TODO: Move other mobile properties
 
 body {
@@ -67,161 +68,6 @@ body {
       // }
     }
 
-    // COVE MANILA
-    .cove-manila-row {
-      height: 60vw;
-
-      .cove-manila-logo {
-        height: 52px !important;
-      }
-
-      .cove-manila-logo-caption {
-        font-size: 10px !important;
-        letter-spacing: 3px !important;
-      }
-    }
-
-    .cove-manila-row-1 {
-      height: unset;
-    }
-
-    .cove-manila-row-2 {
-      padding-top: 0;
-    }
-
-    // DJ SOLAII
-    .featured-dj-1 {
-      // TODO: Set gradient on borders
-      // border: $color-okada-normal-4 1px solid;
-      border-width: 2px;
-
-      .dj-solaii-head {
-        @include display-bg-image('dj-solaii-head', 95% bottom, auto);
-        // bottom: 0;
-        height: 40vw;
-        // min-width: 196.93;
-        // padding: 0;
-        // position: absolute;
-      }
-
-      .dj-solaii-wrapper {
-        min-height: 26.5em;
-      }
-
-      .dj-solaii-details {
-        padding: 0;
-        position: absolute;
-        right: 0;
-        top: 15.26px;
-
-        .dj-solaii-logo {
-          @include display-bg-image('dj-solaii-logo', center, auto);
-          margin: 0 auto;
-          min-height: 76px; // NOTE: This is for 2x reso image
-          min-width: 268px;
-        }
-
-        .dj-solaii-desc-wrapper,
-        .dj-solaii-button-container {
-          margin-left: 15px;
-          margin-right: 15px;
-        }
-
-        .dj-solaii-desc-wrapper {
-          border: $color-okada-normal-4 1px solid;
-          margin-top: 0.55em;
-          max-height: 133.15px;
-          padding: 0 15px 0 40px;
-          position: relative;
-
-          // TODO: DRY these paragraph styles
-          .dj-solaii-desc {
-            color: $white;
-            font-family: $font-family-gotham-medium;
-            font-size: 9px;
-            margin-bottom: 0;
-          }
-        }
-
-        // BUTTON ADJUSTMENTS
-        // For DJ SOLAII
-        .dj-solaii-button-container {
-          .visit-channel-button {
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    // DJ KAKA
-    .featured-dj-2 {
-      margin-top: 0;
-      padding: 0 1em !important;
-      position: relative;
-      top: -26em;
-
-      // TODO: Not yet tested for larger devices
-      .dj-kaka-head-wrapper {
-        border: $color-okada-normal-4 1px solid;
-        grid-area: dj-kaka-head-wrapper;
-        min-height: 220px;
-        position: absolute;
-        top: 30%;
-        width: 54% !important;
-
-        .dj-kaka-head {
-          min-height: $cove-dj-kaka-height-x2;
-          position: inherit;
-          top: -113px !important;
-          width: 100%;
-        }
-      }
-
-      // .dj-kaka-details-wrapper {
-      //   align-self: end;
-      //   display: flex;
-      //   flex-direction: column;
-      //   grid-area: dj-kaka-details-wrapper;
-
-      //   .dj-kaka-details-container {
-      //     border: $color-okada-normal-4 1px solid;
-      //     max-height: 133.15px;
-      //     padding: 0 15px 0 40px;
-      //     position: relative;
-
-      //     .dj-kaka-details {
-      //       transform: translateY(-1.9em);
-      //     }
-      //   }
-
-      //   .dj-kaka-name {
-      //     color: $color-okada-dark-1;
-      //     font-family: 'Gotham Black';
-      //     font-size: 42px;
-      //     line-height: 0.65em;
-      //     // margin-bottom: 20px;
-      //   }
-
-      //   // TODO: DRY these paragraph styles
-      //   .dj-kaka-desc {
-      //     color: $white;
-      //     font-family: 'Gotham Medium';
-      //     font-size: 9px;
-      //     margin-bottom: 0;
-      //   }
-
-      //   .dj-kaka-button-container {
-      //     display: flex;
-      //     flex-direction: row-reverse;
-      //   }
-      // }
-    }
-
-    .cove-manila-row-2-sub-2 {
-      position: relative;
-      top: -10em;
-    }
-
     // pre footer
     .featured-dj-below {
       & + .featured-dj-below {
@@ -229,14 +75,6 @@ body {
       }
     }
   }
-
-  // @include media-breakpoint-up(sm) {
-  //   .the-company-row {
-  //     .the-company-logo {
-  //       width: 100%;
-  //     }
-  //   }
-  // }
 }
 
 // explicit set due to xs breakpoint was already removed for BS4
