refactor(sass, layout, grid): moved mobile & tablets to layout/

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,11 +24,11 @@
 @import 'components/swiper';
 @import 'components/return-to-top';
 @import 'layout/grid';
+@import 'layout/mobile';
+@import 'layout/tablets';
 
 // Theming
 @import 'themes/hero-section';
 @import 'themes/countdown-section';
 @import 'themes/cove-manila';
 @import 'themes/others';
-@import 'themes/mobile';
-@import 'themes/tablets';
